@@ -1,6 +1,8 @@
 Release 0.6.4 (in development)
 ==============================
 
+* Restore compatibility with Pygments >= 1.2.
+
 * #295: Fix escaping of hyperref targets in LaTeX output.
 
 * #302: Fix links generated by the ``:doc:`` role for LaTeX output.
